28. may. 2017
-------------

- Bug fixed that caused false False result
- Minimal output modifies
- Minimal formatting changes

13. apr. 2017
-------------

- Rewrite readme

5. jan. 2017
------------

- Minor changes

15. oct. 2016
-------------

- Upload initial version